update to float prematureConvergence th
add default values for testing purposes